# Qagent

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/qagent/: __init__.py  app.py  cli.py  config.py  db.py
backend/qagent/agent/: __init__.py  responder.py
backend/qagent/api/: routes.py  schemas.py
backend/qagent/backtesting/: __init__.py  engine.py  portfolio.py
backend/qagent/briefing/: __init__.py  daily.py  export.py
backend/qagent/cards/: __init__.py  entry_exit.py  factor_watch.py  generator.py  ranking.py  scoring.py
backend/qagent/catalysts/: __init__.py  hypotheses.py  models.py  (+1 more)
backend/tests/: conftest.py  test_a_share_data_quality.py  test_a_share_enhanced_data.py  test_a_share_universe.py  test_agent_responder.py  test_alert_runner.py  test_alerts.py  test_alpha_quality_center.py  test_api_alert_rules.py  test_api_automation.py  test_api_data_cache.py  test_api_factors.py  test_api_instruments.py  test_api_opportunities.py  test_api_paper_trading.py  test_api_provider_selection.py  test_api_smoke.py  test_api_state.py  test_api_universes.py  test_automation_runner.py  test_backtesting.py  test_card_generation.py  test_catalysts.py  test_cli.py  test_cn_decision_context.py  test_cn_universe_tokens.py  test_config.py  test_daily_brief.py  test_decision_quality_center.py  test_delivery_senders.py  test_domain_models.py  test_entry_exit.py  test_factor_backtest.py  test_factor_watch_rotation.py  test_factors.py  test_free_provider_contracts.py  test_indicators.py  test_instruments.py  test_jobs.py  test_localization.py  (+27 more)
(+193 files in other folders)
