[project]
name = "qagent-backend"
version = "0.1.0"
description = "Qagent backend for US and China A-share opportunity scanning"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "sqlalchemy>=2.0",
  "pandas>=2.2",
  "numpy>=2.0",
  "yfinance>=0.2",
  "akshare>=1.14",
  "baostock>=0.8",
  "exchange-calendars>=4.5",
  "python-dateutil>=2.9",
]

[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "httpx>=0.27",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"
